# actions

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
.github/actions/citra/: action.yml
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: ci.yml
citra/: qt-config.ini  sdl2-config.ini
docker/: citra.dockerfile  download_citra.sh  driver.dockerfile  entrypoint.sh  sdl2-config.ini  test-runner.gdb
docker/citra/: download_citra.sh  sdl2-config.ini
docker/dummy/: .gitignore  Makefile
docker/dummy/source/: main.c
driver/: main.vdo  vncdo.sh
run-tests/: Dockerfile  action.yml
run-tests/docker/: download_citra.sh  entrypoint.sh  sdl2-config.ini  test-runner.gdb
setup/: action.yml
src/: console.rs  gdb.rs  lib.rs  socket.rs
test-crate/: Cargo.toml
test-crate/src/: main.rs
test-runner/: Cargo.toml
test-runner/src/: console.rs  gdb.rs  lib.rs  macros.rs  socket.rs
tests/: integration.rs
